# ResumeMatch_AI

CALai/: README.md  docker-compose.yml
CALai/backend/: .env  .env.example  .gitattributes  Dockerfile  README.md  alembic.ini  pyproject.toml  routes.txt
CALai/backend/alembic/: env.py
CALai/backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
CALai/backend/app/matching/: __init__.py  keyword_matcher.py  personalizer.py  ranker.py  semantic_matcher.py
CALai/backend/app/models/: __init__.py  application.py  interaction.py  job.py  resume.py  user.py
CALai/backend/app/parsing/: __init__.py  extractor.py  llm_parser.py  pipeline.py  section_detector.py  skill_normalizer.py
CALai/backend/app/routers/: auth.py  dashboard.py  jobs.py  profile.py  resume.py
CALai/backend/app/schemas/: auth.py  dashboard.py  job.py  resume.py  user.py
CALai/backend/app/services/: auth_service.py  dashboard_service.py  job_service.py  match_service.py  resume_service.py  user_service.py
CALai/backend/app/utils/: cache.py  security.py  storage.py
CALai/backend/scripts/: seed_jobs.py
CALai/backend/tests/: conftest.py  test_auth.py
CALai/frontend/: build_output.txt  next.config.ts  package-lock.json
CALai/frontend/src/app/: globals.css  layout.tsx  page.tsx
CALai/frontend/src/contexts/: AuthContext.tsx
CALai/site/public/: dashboard.html  home.html  job-detail.html  profile-confirm.html  profile.html
Downloads/Portfolio/: ARSH PURI_resume_outreach (2).docx  Tech_Resume (2) (1).docx  index.html  product_intern_resume.docx
(+16 files in other folders)
